# AI-Utopia

./: .gitignore  .pre-commit-config.yaml  2026-05-30-165011-this-session-is-being-continued-from-a-previous-c.txt  CLAUDE.md  CUsersCarteOneDriveDesktopAiUtopiascriptstest_phase2_boot.py  FARMER_ROLE_SPEC_SUMMARY.md  GeminiResearch.md  HANDOFF.md  IMPLEMENTATION_PLAN.md  M0_PROGRESS.md  M1A_PIPELINE_PLAN.md  M1B_TRAINING_PLAN.md  NEXT_SESSION.md  PROJECT_CONTEXT.md  README.md  docker-compose.production.yml  pyproject.toml  ruff.toml
.design/: fetch.out
Kimi_Agent_Minecraft AI Village Research/: minecraft_village_research.agent.final.base.docx  minecraft_village_research.agent.final.converted.md  minecraft_village_research.agent.final.footnote.docx  minecraft_village_research.agent.final.md  minecraft_village_research.agent.outline.md  minecraft_village_research_sec00.md  minecraft_village_research_sec01.md  minecraft_village_research_sec02.md  minecraft_village_research_sec03.md  minecraft_village_research_sec04.md  minecraft_village_research_sec05.md  minecraft_village_research_sec06.md  minecraft_village_research_sec07.md  minecraft_village_research_sec08.md  minecraft_village_research_sec09.md  minecraft_village_research_sec10.md  minecraft_village_research_sec11.md  plan.md
Research/: Ai-M1-PlanReview.txt  FAST_TRAINER_PLAN.md  KIMI_RESEARCH_PROMPT.md  M2_ROADMAP_AND_DECISIONS.md  MORNING_BRIEF.md  NATURAL_GATHER.md  NATURAL_RECON.md  PHASE_2B_JAVA_IMPLEMENTATION.md  PHASE_2B_WRAPPER_REFACTOR_SPEC.md  PHASE_2_BLOCKER_WRAPPER_REFACTOR.md  PHASE_2_STATUS_2026-05-30.md  PHASE_3_ANALYSIS.md  PHASE_3_PERSISTENT_SURVIVAL_PLAN.md  PHASE_3_SESSION_WORK.md  PHASE_3_SURVIVAL_RESULTS.json  PHASE_3_SURVIVAL_RESULTS_2000.json  REAL_HARVEST_NONDETERMINISM_INVESTIGATION.md  REVIEW_REPORT.md  SEED1_HOLE_DIAGNOSIS.md  SESSION_2026-06-01_BC_ANCHOR_AND_VARIANCE_GATE.md  SESSION_FINAL_2026-05-30.md  SESSION_SUMMARY_2026-05-30.md  STATUS_VERIFIED_2026-05-31.md  SUPERVISED_SESSION_LOG.md  SURVIVAL_RECON.md  TRAINING_ARCH_REVIEW_2026-05-31.md  dc_ablation_results.json  dc_kl0_full.json  v21-diagnosis-2026-05-28.md
config/: rewards.default.json
fabric_mod/: README.md  build.gradle  gradle.properties  settings.gradle
gui/: .gitignore  API_CONTRACT.md  README.md  index.html  package-lock.json  package.json  vite.config.js
gui/src-tauri/: Cargo.toml  gen-icon.py  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: lib.rs  main.rs
scripts/: _dc_follower.py  _dc_sampled.py  _seed3_geom.py  _seed3_reset_cmp.py  _seed3_stall_probe.py  backup-daily.sh  backup-weekly.sh  bc_demonstrator_proof.py  bc_pretrain.py  bc_seed1_traj_probe.py  capture_gatherer_obs_fixture.py  check_arena.py  crontab.example  dc_ablation.py  dc_scout_follower.py  decision_core_rollout.py  farmer_test_close.py  fast_train.py  final_farmer_test.py  find_proven_checkpoint.py  launch-gui.ps1  launch-production-instance.sh  launch-training-instances.sh  live_demo.py  m1a-smoke.sh  m1b-evaluation-gate.sh  n14_reward_probe.py  n15_py4j_diag.py  n15b_payload_diag.py  n15c_bisect.py  n16_pos_trace.py  n16_verify.py  n16b_arena_check.py  n16b_probe_state.py  n17_eval_repro.py  n18_eval_e2e_test.py  n20_harvest_nondeterminism_probe.py  n20b_env_golden_repro.py  n20c_raw_event_trace.py  (+29 more)
(+242 files in other folders)
