[package]
name = "aiutopia-control-center"
version = "0.1.0"
description = "AI Utopia — Control Center desktop app"
authors = ["AI Utopia"]
edition = "2021"
rust-version = "1.77"

# The library the Tauri app is built from. `_lib` suffix avoids a name clash
# with the binary on Windows (Tauri convention).
[lib]
name = "aiutopia_control_center_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# Default release uses the bundled/system WebView2; no custom-protocol toggles
# needed for a static-frontend app.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"   # smaller binary; we have no recover-from-panic logic
codegen-units = 1
lto = true
opt-level = "s"
strip = true
